# agentquest

./: .gitignore  LICENSE.txt  Makefile  README.md  benchmarks_summary.md  pyproject.toml  setup.py
.templates/: customize.py  driver.py
agentquest/: templates.py
agentquest/benchmarks/alfworld/: README.md  __init__.py  case_study.md  driver.py  example.ipynb  extras.py
agentquest/benchmarks/cipher/: README.md  __init__.py  data.json  driver.py  example.ipynb
agentquest/benchmarks/gaia/: README.md  __init__.py  driver.py  example.ipynb  setup.sh
agentquest/benchmarks/gsm8k/: README.md  __init__.py  driver.py  (+1 more)
agentquest/lib/: __init__.py  base_classes.py  metrics_utils.py  utils.py
agentquest/metrics/: __init__.py  metrics.py
agentquest/tutorial/: 2048-tutorial-langchain.ipynb  number_guesser.md  sudoku-tutorial-langchain.ipynb  visualizing_metrics.ipynb
agentquest/utils/: __init__.py  utils.py
agents/: mastermind-langchain-chat-model.ipynb  mastermind-langchain-openai-assistant.ipynb  mastermind-langchain-react.ipynb  mastermind-openai-assistant.ipynb  mastermind-openai-chat-model-with-metrics.ipynb  mastermind-openai-chat-model.ipynb  webshop-openai-chat-model-with-metrics.ipynb
benchmarks/alfworld/: README.md  requirements.txt  setup.sh
benchmarks/autopenbench/: README.md  setup.sh
benchmarks/mastermind/: README.md
benchmarks/sudoku/: README.md  setup.sh
examples/notebooks/: alfworld.ipynb  autopenbench.ipynb  mastermind.ipynb
examples/scripts/: alf_world.py  auto_pen_bench.py  mastermind.py  sudoku.py
legacy/agentquest/: utils.py
(+150 files in other folders)
